added img directory and images for the website. adjusted img sizes to keep site readable.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div>Money Makers Inc</div>
         <div class="head-links">
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">Stocks</a></li>
+                <li><a href="#">Real Estate</a></li>
+                <li><a href="#">Tax Evasion</a></li>
             </ul>
         </div>
         <div class="head-text">
@@ -21,25 +21,25 @@
             <div>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button class="header-button">Sign up</button>
         </div>
-        <img src="" alt="" class="header-image">
+        <img src="img/stocks.jpg" alt="stock market graph" class="header-image">
     </div>
 
     <div class="content-top">
         <div>Some random information</div>
         <div class="image-set">
-            <img src="" alt="">
+            <img src="img/cash.jpg" alt="pile of US dollars" class="content-image">
             <div class="text"> this is some subtext under an illustration or image</div>
         </div>
         <div class="image-set">
-            <img src="" alt="">
+            <img src="img/gold.jpg" alt="pile of gold bars" class="content-image">
             <div class="text"> this is some subtext under an illustration or image</div>
         </div>
         <div class="image-set">
-            <img src="" alt="">
+            <img src="img/cars.jpg" alt="sports cars" class="content-image">
             <div class="text"> this is some subtext under an illustration or image</div>
         </div>
         <div class="image-set">
-            <img src="" alt="">
+            <img src="img/yachts.jpg" alt="yacht out at sea" class="content-image">
             <div class="text"> this is some subtext under an illustration or image</div>
         </div>
     </div>
