added partial css styling and flexbox. Header almost complete.

--- a/index.html
+++ b/index.html
@@ -8,39 +8,44 @@
 </head>
 <body>
     <div class="header">
-        <div>Money Makers Inc</div>
-        <div class="head-links">
-            <ul>
-                <li><a href="#">Stocks</a></li>
-                <li><a href="#">Real Estate</a></li>
-                <li><a href="#">Tax Evasion</a></li>
+        <div class="logo-link">
+            <div class="logo">Money Makers Inc</div>
+            <ul class="head-links">
+                    <li><a href="#">Stocks</a></li>
+                    <li><a href="#">Real Estate</a></li>
+                    <li><a href="#">Tax Evasion</a></li>
             </ul>
         </div>
-        <div class="head-text">
-            <div>This website is awesome</div>
-            <div>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button class="header-button">Sign up</button>
+        <div class="top-focus">
+            <div class="head-text">
+                <div class="main-text">Welcome to Money Makers Inc</div>
+                <div class="main-small">
+                    Here at Money Makers Inc, we teach you how to invest in the stock market to make tremendous gains.
+                    With our simple course you'll go from bottom of the economic chain to sitting at the top drinking champagne from your giant mansion.
+                    The lap of luxury awaits, you simply need to sign up and buy our most expensive course! Budget courses are available and they provide daily affirmations to help you grind through the work day.
+                </div>
+                <button class="header-button">Sign up</button>
+            </div>
+            <img src="img/stocks.jpg" alt="stock market graph" class="header-image">
         </div>
-        <img src="img/stocks.jpg" alt="stock market graph" class="header-image">
     </div>
-
+    <div class="info">Wondering what to do with your future wealth?</div>
     <div class="content-top">
-        <div>Some random information</div>
         <div class="image-set">
             <img src="img/cash.jpg" alt="pile of US dollars" class="content-image">
-            <div class="text"> this is some subtext under an illustration or image</div>
+            <div class="text">Gather all your cash into a pile to rest on. Who could resist?</div>
         </div>
         <div class="image-set">
             <img src="img/gold.jpg" alt="pile of gold bars" class="content-image">
-            <div class="text"> this is some subtext under an illustration or image</div>
+            <div class="text">For those who distrust the government, we reccomend a collection of gold!</div>
         </div>
         <div class="image-set">
             <img src="img/cars.jpg" alt="sports cars" class="content-image">
-            <div class="text"> this is some subtext under an illustration or image</div>
+            <div class="text">Sports cars are great investments, and you should buy as many as you can! They only go up in value!</div>
         </div>
         <div class="image-set">
             <img src="img/yachts.jpg" alt="yacht out at sea" class="content-image">
-            <div class="text"> this is some subtext under an illustration or image</div>
+            <div class="text">Buy a yacht for a grand display of luxury at sea! yearly maintanence is how much!?</div>
         </div>
     </div>
     <div class="content-middle">
