finished css details. finished replacing text in html.

--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
         </div>
     </div>
     <div class="content-middle">
-        <div>
-            This is an inspiring quote, or a testimonial from a customer. 
-            Maybe it's just filling up space, or maybe people will actually read it. 
-            Who knows? All I know is that it looks nice.
+        <div class="quote-text">
+            Ever since I joined Money Makers Inc, I've made more money than I could've ever dreamed about. 
+            The course taught me all the secrets that the economic elite don't want you to know!
+            I made so much money that an organization called the IRS keeps showing up at my door saying I've committed a crime.
         </div>
-        <div>-Thor, God of Thunder</div>
+        <div class="quote-source">-Greg, known tax evader</div>
     </div>
     <div class="content-bottom">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
-        <button>Sign up</button>
+        <div class="bottom-text">
+            <div class="call">Time to make your fortune!</div>
+            <div class="action">Sign up for our course by clicking that button right over there!</div>
+        </div> 
+        <button class="bottom-button">Sign up</button>
     </div>
-    <div class="footer">Copyright C The Odin Project 2021</div>
+    <div class="footer">Copyright <span>&#169;</span> Money Makers Inc 2024</div>
 </body>
 </html>
